# sports-video-parser

./: .gitignore  README.md  pyproject.toml
src/sports_video_parser/: __init__.py  __main__.py  cli.py  config.py  court.py  detector.py  downloader.py  event_detector.py  frame_extractor.py  models.py  stats_aggregator.py  visualizer.py
tests/: test_court.py  test_detector.py  test_event_detector.py  test_models.py  test_stats_aggregator.py  test_visualizer.py
