[project]
name = "sports-video-parser"
version = "0.2.0"
description = "Parse basketball game videos to extract statistics via YOLO object detection"
readme = "README.md"
authors = [
    { name = "Robert Espinoza" }
]
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2024.0.0",
    "opencv-python>=4.9.0",
    "Pillow>=10.0.0",
    "ultralytics>=8.3.0",
    "lap>=0.5.12",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
sports-video-parser = "sports_video_parser.cli:app"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
